--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import "tailwindcss";
 
 body {
-  background: #000000;
+  background: #111;
 }
 
 * {
@@ -10,4 +10,16 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 14px;
+  }
+  body {
+    padding: 0;
+  }
+  button, input, select, textarea {
+    font-size: 1rem;
+  }
 }
